# NAUQ_game_engine

./: .gitmodules  CMakeLists.txt  README.md
Editor/: CMakeLists.txt  Editor2DLayer.cpp  Editor2DLayer.hpp  EditorApp.cpp
Editor/panel/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp
Editor/shaders/: Texture.glsl
FlappyBird/: CMakeLists.txt  Color.hpp  GameLayer.cpp  GameLayer.hpp  Level.cpp  Level.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Player.cpp  Player.hpp  Random.hpp  app.cpp
NAUQ/: CMakeLists.txt
NAUQ/dependence/: CMakeLists.txt
NAUQ/dependence/entt/: CMakeLists.txt
NAUQ/dependence/entt/include/: entt.hpp
NAUQ/dependence/imgui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
NAUQ/dependence/imgui-docking/: CMakeLists.txt  imgui.h  imgui_internal.h
NAUQ/dependence/stb_image/: CMakeLists.txt  stb_image.cpp  stb_image.hpp
NAUQ/include/: nauq.hpp
NAUQ/include/NAUQ/: Application.hpp  EntryPoint.hpp  Test.hpp  nauq_pch.hpp
NAUQ/include/nauq/: Application.hpp  Core.hpp  EntryPoint.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  OrthographicCameraController.hpp  Window.hpp  nauq_pch.hpp
NAUQ/include/nauq/core/: Application.hpp  Core.hpp  KeyCodes.hpp  Layer.hpp  MouseButtonCodes.hpp  TimeStep.hpp  Window.hpp
NAUQ/include/nauq/debug/: Instrumentor.hpp
NAUQ/include/nauq/events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
NAUQ/include/nauq/imGui/: ImGuiImpl.hpp  ImGuiLayer.hpp
NAUQ/include/nauq/platform/: Linux_Window.hpp  Windows_Window.hpp
NAUQ/include/nauq/platform/Linux/: Linux_Window.hpp
NAUQ/include/nauq/platform/Windows/: Windows_Window.hpp
NAUQ/include/nauq/platform/glfw3/: Glfw3_Input.hpp  Glfw3_Window.hpp
NAUQ/include/nauq/platform/openGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFramebuffer.hpp  OpenGLInput.hpp  OpenGLRenderAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp  OpenGLVertexArray.hpp  OpenGLWindow.hpp  OpenGL_Buffer.hpp  OpenGL_Context.hpp  OpenGL_Input.hpp  OpenGL_Window.hpp
NAUQ/include/nauq/platform/vulkan/: VulkanWindow.hpp
NAUQ/include/nauq/renderer/: Buffer.hpp  Camera.hpp  Framebuffer.hpp  GraphicsContext.hpp  OpenGLRenderAPI.cpp  OpenGLRenderAPI.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  SubTexture2D.hpp  Texture.hpp  VertexArray.hpp
NAUQ/include/nauq/scene/: Component.hpp  Entity.hpp  Scene.hpp  SceneCamera.hpp  ScriptableEntity.hpp
NAUQ/src/: Application.cpp  CMakeLists.txt  Layer.cpp  LayerStack.cpp  Log.cpp  OrthographicCameraController.cpp  Test.cpp  nauq_pch.hpp
NAUQ/src/core/: Application.cpp  LayerStack.cpp  Log.cpp  Window.cpp
NAUQ/src/debug/: Instrumentor.cpp
NAUQ/src/imGui/: ImGuiBuild.cpp  ImGuiLayer.cpp
NAUQ/src/platform/: Linux_Window.cpp  Windows_Window.cpp
NAUQ/src/platform/Windows/: Windows_Window.cpp
NAUQ/src/platform/glfw3/: Glfw3_Input.cpp  Glfw3_Window.cpp
NAUQ/src/platform/linux/: Linux_Input.cpp
NAUQ/src/platform/openGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLInput.cpp  OpenGLRenderAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLWindow.cpp  OpenGL_Buffer.cpp  OpenGL_Context.cpp  OpenGL_Input.cpp  OpenGL_Window.cpp
NAUQ/src/renderer/: Buffer.cpp  Framebuffer.cpp  OrthographicCamera.cpp  OrthographicCameraController.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  SubTexture2D.cpp  Texture.cpp  VertexArray.cpp
NAUQ/src/scene/: Entity.cpp  Scene.cpp  SceneCamera.cpp
Sandbox/: CMakeLists.txt  ParticleSystem.cpp  ParticleSystem.hpp  Sandbox2DLayer.cpp  Sandbox2DLayer.hpp  SandboxApp.cpp  Sandbox_pch.hpp  main.cpp
Sandbox/shaders/: Flat Color.glsl  Texture.glsl
